--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/******General styles******/
 * {
     margin: 0;
     padding: 0;
@@ -8,259 +7,343 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
-
-    --primary-text-color: #181820;
-    --secondary-text-color: #5c5c62;
-    --durability-text-color: #6a737d9c;
-    --icon-color: #6a737d;
-    --border-color: #ff9a0045;
-    --text-decoration-color: #ff9a00;
+    font-size: 16px;
+    color: #FFF;
+    background-color: #15162D;
 }
 
-.container {
+.main {
+    background-image: url("assets/main_bg.svg");
+    background-position: center 115%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    overflow: hidden;
+}
+
+.main::before {
+    content: "";
+    position: absolute;
+    top: 20%;
+    left: -100px;
+    width: 380px;
+    height: 380px;
+    background-image: url("assets/planet-1.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: scaleAnimation 25s ease-in-out infinite;
+}
+
+.main::after {
+    content: "";
+    position: absolute;
+    top: 5%;
+    right: -50px;
+    width: 355px;
+    height: 355px;
+    background-image: url("assets/planet-2.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: scale-animation 25s ease-in-out infinite;
+    animation-delay: 2s;
+}
+
+@keyframes scale-animation {
+    0% {
+      transform: scale(1);
+    }
+
+    50% {
+      transform: scale(1.1);
+    }
+
+    100% {
+      transform: scale(1);
+    }
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.sub-title {
+    font-size: 28px;
+}
+
+.wrapper {
+    max-width: 1024px;
     margin: 0 auto;
-    padding: 0 30px;
-    max-width: 900px;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
-.fh {
+.info {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.fv {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.resume {
-    margin: 50px auto;
-    border: 1px solid #f5f5f5;
-    box-shadow: 1px 1px 7px 7px #f5f5f5;
-    padding: 30px 0;
-    max-width: 900px;
-}
-
-.resume__block {
-    border-bottom: 3px solid var(--border-color);
-    padding-bottom: 30px;
-    margin-bottom: 15px;
-}
-
-@media screen and (max-width: 576px) {
-    .contact_info_container,
-    .main-info {
-        flex-direction: column;
-    }
-
-    .contact_info_container {
-        align-items: center;
-    }
-
-    .contact-info__block:not(:last-child) {
-        margin-bottom: 20px;
-    }
-
-    .experiences {
-        margin-right: 0;
-    }
-}
-
-/******Contact info styles******/
-.contact-info__header,
-.contact-info__sub-header {
-    text-align: center;
-}
-
-.contact-info__header {
-    color: var(--primary-text-color);
-    margin-bottom: 15px;
-    text-decoration-color: var(--text-decoration-color);
-    text-decoration-line: underline;
-}
-
-.contact-info__sub-header {
-    color: var(--secondary-text-color);
-    margin-bottom: 30px;
-}
-
-.contact-info__block {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.contact-info__block--center {
+    align-items: center;
     justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
-.contact-info__item {
-    color: var(--secondary-text-color);
-    text-decoration: none;
-    display: flex;
-    justify-content: start;
+.info-title {
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 5px;
 }
 
-.contact-info__item:not(:last-child) {
-    margin-bottom: 20px;
+.info-subtitle {
+    font-size: 18px;
+    font-weight: 400;
 }
 
-.contact-info__item-icon-wrapper {
-    margin-right: 10px;
-    width: 20px;
-    display: flex;
-    justify-content: center;
-}
-
-.contact-info__item-icon path {
-    fill: var(--icon-color);
-}
-
-.contact-info__item-icon {
-    height: 1.1428rem;
-    vertical-align: text-bottom;
-}
-
-.contact-info__avatar {
-    border-radius: 50%;
+.info-avatar {
     width: 100px;
     height: 100px;
+    border-radius: 50%;
+    border: 5px solid #797FA0;
+    margin-right: 20px;
+    overflow: hidden;
+}
+
+.info-avatar img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    border: 3px solid;
-    border-color: var(--text-decoration-color);
+    object-position: center;
 }
 
-/******Intro and skills styles******/
-.intro {
+.contacts {
     display: flex;
-    justify-content: start;
-}
-
-.intro__icon-wrapper {
-    margin-right: 30px;
-    width: 30px;
-    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    border-bottom: 5px solid #797FA0;
 }
 
-.intro__icon {
-    height: 1.1428rem;
-    vertical-align: text-bottom;
-}
-
-.intro__icon path {
-    fill: var(--text-decoration-color);
-}
-
-.intro_text {
-    color: var(--secondary-text-color);
-    text-align: justify;
-}
-
-.skills__header {
-    color: var(--secondary-text-color);
-    text-align: center;
+.contacts-title{
     margin-bottom: 15px;
 }
 
-.skills__text {
-    color: var(--secondary-text-color);
-    text-align: justify;
+.contacts-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
 }
 
-/******Experience and additional info styles******/
-.experiences {
-    flex: 1 1 60%;
-    margin-right: 50px;
-}
-
-.experiences__header {
-    color: var(--secondary-text-color);
-    text-align: left;
-    margin-bottom: 20px;
-}
-
-.experiences__company-header-durability {
-    color: var(--durability-text-color);
-    text-align: left;
-    margin-bottom: 10px;
-    font-size: 15px;
-}
-
-.experiences__company-header-name {
-    color: var(--primary-text-color);
-    text-decoration-color: var(--text-decoration-color);
-    text-decoration-line: underline;
-    text-align: left;
-    margin-bottom: 20px;
-}
-
-.experiences__company-project {
+.contacts-item {
     margin-left: 15px;
-    margin-bottom: 25px;
 }
 
-.experiences__company-project-role {
-    color: var(--durability-text-color);
-    text-align: left;
+.contacts-item:first-child {
+    margin-left: 0;
+}
+
+.contacts-item__link {
+    font-size: 0;
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+    transition: 0.3s;
+}
+
+.contacts-item__link:hover {
+    opacity: 0.7;
+    transition: 0.3s;
+}
+
+.contacts-item__link svg {
+    width: 30px;
+    height: 30px;
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    border-bottom: 5px solid #797FA0;
+}
+
+.about p {
     margin-bottom: 10px;
-    font-size: 15px;
+    text-align: center;
 }
 
-.experiences__company-project-name {
-    color: var(--primary-text-color);
-    text-align: left;
-    margin-bottom: 10px;
+.about p:last-child {
+    margin-bottom: 0;
 }
 
-.experiences__company-project-responsibilities {
-    color: var(--secondary-text-color);
+.about-title {
+    margin-bottom: 15px;
+}
+
+.skills {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    border-bottom: 5px solid #797FA0;
+}
+
+.skills-title {
+    margin-bottom: 15px;
+}
+
+.skills-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.skills-item {
+    margin: 10px;
+    padding: 10px 20px;
+    background-color: #797FA0;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #FFF;
+}
+
+.education {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    border-bottom: 5px solid #797FA0;
+}
+
+.education-title {
+    margin-bottom: 15px;
+}
+
+.education-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.education-item span {
+    margin: 5px 0;
+    font-size: 14px;
+    color: #797FA0;
+    text-decoration: underline;
+}
+
+.experience {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.experience-title {
+    margin-bottom: 15px;
+}
+
+.experience-list {
+    list-style: none;
+}
+
+.experience-item p {
+    margin-bottom: 5px;
+    font-size: 18px;
+}
+
+.experience-item p:last-child {
+    margin-bottom: 0;
+}
+
+.experience-item {
+    margin-bottom: 15px;
+}
+
+.experience-item span {
+    margin: 5px 0;
+    font-size: 14px;
+    color: #797FA0;
+    text-decoration: underline;
+}
+
+.experience-list__innner {
     padding-left: 20px;
 }
 
-.additional-info {
-    flex: 1 1 40%;
+.experience-list__inner-item {
+    margin-bottom: 5px;
+    color: #b7b5b5;
 }
 
-.additional-info__education {
-    margin-bottom: 20px;
+@media (max-width: 1500px) {
+    .main::before {
+        top: 20%;
+        left: -150px;
+        width: 280px;
+        height: 280px;
+    }
+    
+    .main::after {
+        top: 5%;
+        right: -100px;
+        width: 255px;
+        height: 255px;
+    }
 }
 
-.additional-info__education-header {
-    color: var(--secondary-text-color);
-    text-align: left;
-    margin-bottom: 20px;
+@media (max-width: 1300px) {
+    .main::before {
+        top: 20%;
+        left: -200px;
+        width: 280px;
+        height: 280px;
+    }
+    
+    .main::after {
+        top: 5%;
+        right: -150px;
+        width: 255px;
+        height: 255px;
+    }
 }
 
-.additional-info__education-university-durability {
-    color: var(--durability-text-color);
-    text-align: left;
-    margin-bottom: 10px;
-    font-size: 15px;
-}
 
-.additional-info__education-university-speciality {
-    color: var(--primary-text-color);
-    text-align: left;
-    margin-bottom: 10px;
-}
-
-.additional-info__education-university-name {
-    color: var(--secondary-text-color);
-}
-
-.additional-info__languages {
-    margin-bottom: 20px;
-}
-
-.additional-info__languages-header {
-    color: var(--secondary-text-color);
-    text-align: left;
-    margin-bottom: 20px;
-}
-
-.additional-info__languages-item {
-    color: var(--secondary-text-color);
+@media (max-width: 1100px) {
+    .main::before {
+        top: 4%;
+        left: -100px;
+        width: 280px;
+        height: 280px;
+    }
+    
+    .main::after {
+        top: 5%;
+        right: -70px;
+        width: 255px;
+        height: 255px;
+    }
 }
